# LunaDEM

./: .gitignore  CMakeLists.txt  LICENSE  README.md  app.py  code-work.md  documentation.txt  lunar_data.md  mkdocs.yml  pyproject.toml  requirements.txt  run.md  run_photoclinometry.py  setup.py  sfs.md  test.py  update.md  v2.md  view_tiff.py
.github/workflows/: ci.yml  release.yml
MISSION CHANDRA/: BASE.SLDPRT  BOBBY 2 -1.SLDASM  BOBBY 2.SLDASM  COVER.SLDPRT  CRANK CONNET.SLDPRT  CRANK mech.SLDPRT  PRAGYAN ROVER.SLDASM  ROVER WHEEL.SLDPRT  boggy mech 1.SLDPRT  boggy mech 2.SLDPRT  boggy mech.SLDPRT  connecting rod.SLDPRT  hex screw_am.SLDPRT  hex screw_am1.SLDPRT  instrument ball bearing_68_am.SLDPRT
dataset/TC1S2B0_01_07495N079E3030/metadata/: camera.json  caminfo.pvl  isis.lbl  pds.lbl
dataset/TC1S2B0_01_07495N079E3030/stac/: item.json
dataset/TC1S2B0_01_07495N088E3030/metadata/: camera.json  caminfo.pvl  isis.lbl  pds.lbl
dataset/TC1S2B0_01_07495N088E3030/stac/: item.json
dataset/TC1S2B0_01_07495N102E3030/metadata/: camera.json  caminfo.pvl  isis.lbl  pds.lbl
dataset/TC1S2B0_01_07495N102E3030/stac/: item.json
dataset/TC1S2B0_01_07495N116E3030/metadata/: camera.json  caminfo.pvl  isis.lbl  pds.lbl
dataset/TC1S2B0_01_07495N116E3030/stac/: item.json
dataset/TC1S2B0_01_07495N130E3030/metadata/: camera.json  caminfo.pvl  isis.lbl  pds.lbl
dataset/TC1S2B0_01_07495N130E3030/stac/: item.json
dataset/TC1S2B0_01_07495N143E3030/metadata/: camera.json  caminfo.pvl  isis.lbl  pds.lbl
dataset/TC1S2B0_01_07495N143E3030/stac/: item.json
dataset/TC1S2B0_01_07495N157E3031/metadata/: camera.json  caminfo.pvl  isis.lbl  pds.lbl
dataset/TC1S2B0_01_07495N157E3031/stac/: item.json
dataset/TC1S2B0_01_07495N171E3031/metadata/: camera.json  caminfo.pvl  isis.lbl  pds.lbl
dataset/TC1S2B0_01_07495N171E3031/stac/: item.json
dataset/TC1S2B0_01_07495N184E3031/metadata/: camera.json  caminfo.pvl  isis.lbl  pds.lbl
dataset/TC1S2B0_01_07495N184E3031/stac/: item.json
dataset/TC1S2B0_01_07496N077E3020/metadata/: camera.json  caminfo.pvl  isis.lbl  pds.lbl  provenance.txt
dataset/TC1S2B0_01_07496N077E3020/stac/: item.json
dataset/TC1S2B0_01_07496N087E3020/metadata/: camera.json  caminfo.pvl  isis.lbl  pds.lbl
dataset/TC1S2B0_01_07496N087E3020/stac/: item.json
dataset/TC1S2B0_01_07496N101E3020/metadata/: camera.json  caminfo.pvl  isis.lbl  pds.lbl
dataset/TC1S2B0_01_07496N101E3020/stac/: item.json
dataset/TC1S2B0_01_07496N115E3020/metadata/: camera.json  caminfo.pvl  isis.lbl  pds.lbl
dataset/TC1S2B0_01_07496N115E3020/stac/: item.json
dataset/TC1S2B0_01_07496N128E3020/metadata/: camera.json  caminfo.pvl  isis.lbl  pds.lbl
dataset/TC1S2B0_01_07496N128E3020/stac/: item.json
dataset/TC1S2B0_01_07496N142E3020/metadata/: camera.json  caminfo.pvl  isis.lbl  pds.lbl
dataset/TC1S2B0_01_07496N142E3020/stac/: item.json
dataset/TC1S2B0_01_07496N156E3020/metadata/: camera.json  caminfo.pvl  isis.lbl  pds.lbl
dataset/TC1S2B0_01_07496N156E3020/stac/: item.json
dataset/TC1S2B0_01_07496N169E3020/metadata/: camera.json  caminfo.pvl  isis.lbl  pds.lbl
dataset/TC1S2B0_01_07496N169E3020/stac/: item.json
dataset/TC1S2B0_01_07496N183E3021/metadata/: camera.json  caminfo.pvl  isis.lbl  pds.lbl
dataset/TC1S2B0_01_07496N183E3021/stac/: item.json
docs/: api.md  cli.md  examples.md  index.md  theory.md
examples/: basic_generate.py  generate_from_config.py
examples/configs/: landing.yaml  reconstruction.yaml
examples/webapp/: README.md  app.py
lunadem/: __init__.py  branding.py  cli.py  native.py  sfs_theory.py
lunadem/assets/docs/: sfs_assumptions.md  sfs_maths.md  sfs_terms.md
lunadem/assets/models/: illumination_cnn.onnx  metrics.json  scene_context_cnn.onnx  view_geometry_cnn.onnx
lunadem/core/: __init__.py  api.py  config.py  models.py  registry.py
lunadem/datasets/: __init__.py  kaguya.py
lunadem/geometry/: __init__.py  conversions.py  lighting.py  planetary.py  scaling.py
lunadem/io/: __init__.py  image.py  manifest.py  mesh.py  raster.py
lunadem/landing/: __init__.py  analysis.py  rovers.py  sites.py  suitability.py
lunadem/methods/: __init__.py  base.py  hybrid.py  ml_models.py  multiscale.py  sfs.py
lunadem/ml/: __init__.py  inference.py
lunadem/utils/: __init__.py  arrays.py  logging.py
lunadem/visualization/: __init__.py  interactive.py  plots.py
lunardem/: __init__.py  cli.py  native.py  sfs_theory.py
lunardem/core/: __init__.py  api.py  config.py  models.py  registry.py
lunardem/datasets/: __init__.py  kaguya.py
lunardem/geometry/: __init__.py  conversions.py  lighting.py  planetary.py  scaling.py  surface.py
lunardem/io/: __init__.py  image.py  manifest.py  mesh.py  pds.py  raster.py
lunardem/landing/: __init__.py  analysis.py  rovers.py  sites.py  suitability.py
lunardem/methods/: __init__.py  base.py  hybrid.py  ml_models.py  multiscale.py  sfs.py
lunardem/ml/: __init__.py  inference.py
lunardem/utils/: __init__.py  arrays.py  config.py  files.py  logging.py
lunardem/visualization/: __init__.py  interactive.py  plots.py
native/: CMakeLists.txt  lunadem_native.cpp
sfs_photoclinometry/: __init__.py  core.py  io_handler.py  utils.py  visualization.py
tests/: conftest.py  test_branding.py  test_cli.py  test_config_validation.py  test_crs.py  test_dataset_api.py  test_geometry.py  test_image_io.py  test_integration_pipeline.py  test_large_scene.py  test_methods_ml_hybrid.py  test_methods_multiscale.py  test_methods_sfs.py  test_models.py  test_plotting.py  test_public_api.py  test_scaling.py
tools/: generate_reference_docs.py  train_metadata_cnns.py
