[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "lunadem"
version = "0.2.1"
description = "Production-ready DEM generation toolkit for lunar and planetary imagery."
readme = "README.md"
requires-python = ">=3.9,<3.13"
license = { file = "LICENSE" }
authors = [
  { name = "kartavya suryawanshi", email = "kartavya.xenon@gmail.com" }
]
keywords = [
  "dem",
  "shape-from-shading",
  "photoclinometry",
  "lunar",
  "planetary",
  "geospatial"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Scientific/Engineering :: Image Processing"
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "rasterio>=1.3",
  "imageio>=2.34",
  "pydantic>=2.8",
  "typer>=0.12",
  "PyYAML>=6.0"
]

[project.optional-dependencies]
ml = [
  "torch>=2.2"
]
viz = [
  "matplotlib>=3.8"
]
pds = [
  "pvl>=1.3"
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25"
]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.10",
  "build>=1.2",
  "twine>=5.1",
  "wheel>=0.45",
  "types-PyYAML>=6.0"
]

[project.urls]
Homepage = "https://github.com/Kartavya728/Generation-of-High-resolution-Digital-Elevation-Model-from-Lunar-Images-using-Photoclinometry"
Repository = "https://github.com/Kartavya728/Generation-of-High-resolution-Digital-Elevation-Model-from-Lunar-Images-using-Photoclinometry"
Documentation = "https://github.com/Kartavya728/Generation-of-High-resolution-Digital-Elevation-Model-from-Lunar-Images-using-Photoclinometry/tree/main/docs"
Issues = "https://github.com/Kartavya728/Generation-of-High-resolution-Digital-Elevation-Model-from-Lunar-Images-using-Photoclinometry/issues"

[project.scripts]
lunardem = "lunardem.cli:main"
lunadem = "lunardem.cli:lunadem_main"
kartavya = "lunardem.cli:kartavya_main"
babies = "lunardem.cli:babies_main"
noor = "lunardem.cli:noor_main"
overkill = "lunardem.cli:overkill_main"

[tool.hatch.build.targets.wheel]
packages = ["lunardem", "sfs_photoclinometry"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E203"]

[tool.mypy]
python_version = "3.9"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
