[build-system]
requires = [
  "scikit-build-core>=0.10",
  "pybind11>=2.12"
]
build-backend = "scikit_build_core.build"

[project]
name = "lunadem"
dynamic = ["version"]
description = "Lunar DEM generation, Kaguya scene analysis, metadata prediction, and rover-aware landing utilities."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "kartavya suryawanshi", email = "kartavya.xenon@gmail.com" }
]
keywords = [
  "dem",
  "shape-from-shading",
  "photoclinometry",
  "lunar",
  "planetary",
  "stac",
  "landing",
  "kaguya"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: C++",
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Scientific/Engineering :: Image Processing"
]
dependencies = [
  "numpy>=1.24,<2.1",
  "scipy>=1.10",
  "rasterio>=1.3",
  "imageio>=2.34",
  "imageio-ffmpeg>=0.5",
  "matplotlib>=3.8",
  "plotly>=5.22",
  "pygame>=2.6",
  "pydantic>=2.8",
  "requests>=2.32",
  "typer>=0.12",
  "PyYAML>=6.0",
  "onnxruntime>=1.18"
]

[project.optional-dependencies]
ml = [
  "torch>=2.2",
  "onnx>=1.16",
  "scikit-learn>=1.5"
]
viz = [
  "matplotlib>=3.8",
  "plotly>=5.22"
]
pds = [
  "pvl>=1.3"
]
native = [
  "pybind11>=2.12",
  "scikit-build-core>=0.10"
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25"
]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.10",
  "build>=1.2",
  "twine>=6.2",
  "wheel>=0.45",
  "types-PyYAML>=6.0",
  "onnx>=1.16",
  "scikit-learn>=1.5",
  "pybind11>=2.12",
  "scikit-build-core>=0.10"
]

[project.urls]
Homepage = "https://github.com/Kartavya728/Generation-of-High-resolution-Digital-Elevation-Model-from-Lunar-Images-using-Photoclinometry"
Repository = "https://github.com/Kartavya728/Generation-of-High-resolution-Digital-Elevation-Model-from-Lunar-Images-using-Photoclinometry"
Documentation = "https://github.com/Kartavya728/Generation-of-High-resolution-Digital-Elevation-Model-from-Lunar-Images-using-Photoclinometry/tree/main/docs"
Issues = "https://github.com/Kartavya728/Generation-of-High-resolution-Digital-Elevation-Model-from-Lunar-Images-using-Photoclinometry/issues"

[project.scripts]
lunadem = "lunadem.cli:main"
lunardem = "lunardem.cli:main"
kartavya = "lunadem.cli:kartavya_main"
babies = "lunadem.cli:babies_main"
noor = "lunadem.cli:noor_main"
overkill = "lunadem.cli:overkill_main"

[tool.scikit-build]
cmake.version = ">=3.20"
wheel.packages = ["lunadem", "lunardem", "sfs_photoclinometry"]
sdist.include = [
  "lunadem/**",
  "lunardem/**",
  "sfs_photoclinometry/**",
  "native/**",
  "tools/**",
  "README.md",
  "LICENSE",
  "setup.py",
  "pyproject.toml",
  "CMakeLists.txt",
  "run.md",
  "sfs.md",
  "lunar_data.md",
  "update.md"
]

[tool.scikit-build.metadata.version]
provider = "regex"
input = "lunadem/__init__.py"
regex = "__version__ = \"(?P<value>[^\"]+)\""

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E203"]

[tool.mypy]
python_version = "3.9"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
